# FRUGAL-base

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  PROGRAM.md  README.md  TODO.md  config.json  config_lu.json  config_lu_simple.json  config_lu_test.json  config_plain.json  config_verbose.json  cuda_graph_notation.md  execution_routine.md  run_cholesky.sh  secondStepSolver_MIP_Reference.md
configs/: config.json
optimization/: CMakeLists.txt  executor.cu  executor.hpp  executor_v2.cu  optimization.cu  optimization.hpp  optimizationInput.hpp  optimizationOutput.hpp  optimizer.cu  optimizer.hpp  taskManager.hpp  taskManager_v2.hpp
optimization/strategies/: firstStepSolver.cpp  firstStepSolver.hpp  noOptimizationStrategy.cu  secondStepSolver.cpp  secondStepSolver.hpp  strategies.hpp  strategyUtilities.cu  twoStepOptimizationStrategy.cu
playground/: CMakeLists.txt  coldStartTest.cu  consecutiveGraphMemoryTest.cu  domainEnlargementTest.cu  taskManagerExample.cu  taskManager_v2_example.cu
profiling/: CMakeLists.txt  annotation.cu  annotation.hpp  cudaGraphExecutionTimelineProfiler.cu  memoryManager.cu  memoryManager.hpp  memoryManager_v2.cu  memred.cu  memred.hpp
public/: CMakeLists.txt  memopt.hpp
userApplications/: CMakeLists.txt  lu_def.cu  resnet.cu  tiledCholesky.cu  tiledCholeskyDomainEnlarge.cu  tiledCholeskyMemoryOptimized.cu  tiledCholeskyNaiveGraph.cu  tiledCholeskyStaged.cu  tiledCholesky_with_pointer_deps.cu
userApplications/lulesh/: Makefile  lulesh.cu  vector.h
utilities/: CMakeLists.txt  configurationManager.hpp  cudaGraphConstructor.hpp  cudaGraphUtilities.cu  cudaUtilities.cu  disjointSet.hpp
