add_library(
  optimization
  STATIC
  optimization.cu
  optimizer.cu
  executor.cu
  executor_v2.cu
)
target_link_libraries(
  optimization
  PRIVATE
  strategies
  annotation
  cudaUtilities
  cudaGraphUtilities
  cudaGraphExecutionTimelineProfiler
  peakMemoryUsageProfiler
  utilities
  memred
  memoryManager
  CUDA::cuda_driver
)

add_subdirectory(strategies)
